pod-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  labels:
    app: debug
    internet: outbound
spec:
  containers:
    - name: debug
      image: ubuntu:latest
      command:
        - tail
        - -f
        - /dev/null
