pod-dev-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-dev
  labels:
    env: dev
    app: client
spec:
  containers:
    - name: curl
      image: docker.io/alpine/curl:latest
      command:
        - tail
        - -f
        - /dev/null
      livenessProbe:
        exec:
          command:
            - curl
            - http://server
        initialDelaySeconds: 5
        periodSeconds: 5
