pod-ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  labels:
    app: debug
spec:
  containers:
    - name: ubuntu
      image: ubuntu:latest
      command:
        - tail
        - -f
        - /dev/null
