network-policy-allow-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web
spec:
  podSelector:
    matchLabels:
      env: dev
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: client
      ports:
        - port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: server
      ports:
        - port: 80
